# zlbcwiki

./: README.md  main.py  pyproject.toml  run.bat
zlbcwiki/: db.sqlite3  manage.py
zlbcwiki/templates/: base.html
zlbcwiki/templates/registration/: logged_out.html  login.html  password_reset_complete.html  password_reset_confirm.html  password_reset_done.html  password_reset_form.html  password_reset_subject.txt  register.html
zlbcwiki/templates/wiki/: compare.html  create_edit.html  delete_confirm.html  detail.html  edit.html  history.html  index.html  list.html  revision.html
zlbcwiki/wiki/: apps.py  models.py  urls.py  views.py
zlbcwiki/wiki/migrations/: 0001_initial.py
zlbcwiki/zlbcwiki/: asgi.py  settings.py  urls.py  wsgi.py
