[project]
name = "zlbcwiki"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.10"
dependencies = [
    "crispy-bootstrap5>=2025.4",
    "diff-match-patch>=20241021",
    "django>=5.2",
    "django-bootstrap5>=25.1",
    "django-crispy-forms>=2.4",
]
[[tool.uv.index]]
name = "tsinghua"
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = true
